# arrow-extendr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: check-features.yml  docs.yml  msrv.yml
.zed/: settings.json
src/: from.rs  lib.rs  nanoarrow.rs  polars.rs  to.rs
src/geoarrow/: mod.rs
tests/: geoarrow.rs  nanoarrow.rs  polars.rs
