[package]
name = "arrow_extendr"
version = "58.0.1"
edition = "2021"
# matches arrow
rust-version = "1.70.0"
description = "Enables the use of arrow-rs in R using extendr and nanoarrow"
readme = "README.md"
repository = "https://github.com/josiahparry/arrow-extendr"
license = "MIT OR Apache-2.0"
keywords = ["arrow", "extendr", "rstats"]
categories = ["development-tools::ffi"]
include = ["Cargo.toml", "README.md", "src/*"]

[lib]
crate-type = ["lib", "staticlib"]
name = "arrow_extendr"

[dependencies]
anyhow = "1"
arrow = { version = "58.1.0", features = ["ffi"], optional = true }
extendr-api = ">=0.8.1"
polars-core = { version = "0.53.0", features = [
  "dtype-array",
  "dtype-categorical",
  "dtype-date",
  "dtype-datetime",
  "dtype-decimal",
  "dtype-duration",
  "dtype-i8",
  "dtype-i16",
  "dtype-i128",
  "dtype-struct",
  "dtype-time",
  "dtype-u8",
  "dtype-u16",
  "dtype-u128",
  "fmt",
  "temporal",
], optional = true }
polars-core-051 = { package = "polars-core", version = "0.51.0", default-features = false, features = [
  "dtype-array",
  "dtype-categorical",
  "dtype-date",
  "dtype-datetime",
  "dtype-decimal",
  "dtype-duration",
  "dtype-i8",
  "dtype-i16",
  "dtype-i128",
  "dtype-struct",
  "dtype-time",
  "dtype-u8",
  "dtype-u16",
  "fmt",
  "temporal",
], optional = true }

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
polars = ["polars-53"]
polars-53 = ["arrow", "dep:polars-core"]
polars-51 = ["arrow", "dep:polars-core-051"]
