[package]
name = "arrow_extendr"
version = "58.0.2"
edition = "2024"
# matches arrow
rust-version = "1.85.0"
description = "Enables the use of arrow-rs in R using extendr and nanoarrow"
readme = "README.md"
repository = "https://github.com/josiahparry/arrow-extendr"
license = "MIT OR Apache-2.0"
keywords = ["arrow", "extendr", "rstats"]
categories = ["development-tools::ffi"]
include = ["Cargo.toml", "README.md", "src/*"]

[package.metadata.docs.rs]
features = ["geoarrow-08", "polars-53"]

[lib]
crate-type = ["lib", "staticlib"]
name = "arrow_extendr"

[dependencies]
anyhow = "1"
arrow = { version = "58.3.0", features = ["ffi"], optional = true }
extendr-api = ">=0.8.1"
extendr-ffi = "0.9.0"
geoarrow-array = { version = "0.8", optional = true }
polars-core = {
  version = "0.53.0",
  features = [
    "dtype-array",
    "dtype-categorical",
    "dtype-date",
    "dtype-datetime",
    "dtype-decimal",
    "dtype-duration",
    "dtype-i8",
    "dtype-i16",
    "dtype-i128",
    "dtype-struct",
    "dtype-time",
    "dtype-u8",
    "dtype-u16",
    "dtype-u128",
    "fmt",
    "temporal",
  ],
  optional = true
}
polars-core-051 = {
  package = "polars-core",
  version = "0.51.0",
  default-features = false,
  features = [
    "dtype-array",
    "dtype-categorical",
    "dtype-date",
    "dtype-datetime",
    "dtype-decimal",
    "dtype-duration",
    "dtype-i8",
    "dtype-i16",
    "dtype-i128",
    "dtype-struct",
    "dtype-time",
    "dtype-u8",
    "dtype-u16",
    "fmt",
    "temporal",
  ],
  optional = true
}

[dev-dependencies]
anyhow = "1"
extendr-engine = "0.9.0"
geo-types = "0.7"
geoarrow-schema = "0.8"
serial_test = "3"

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
geoarrow-08 = ["arrow", "dep:geoarrow-array"]
polars = ["polars-53"]
polars-51 = ["arrow", "dep:polars-core-051"]
polars-53 = ["arrow", "dep:polars-core"]
